--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -40,26 +40,26 @@
     "@angular-devkit/build-angular": "~0.1100.6",
     "@angular/cli": "~11.0.6",
     "@angular/compiler-cli": "~11.0.6",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
-    "@compodoc/compodoc": "^1.1.11",
-    "@storybook/addon-actions": "^6.3.0",
-    "@storybook/addon-essentials": "^6.3.0",
-    "@storybook/addon-links": "^6.3.0",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
+    "@compodoc/compodoc": "^1.1.15",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
     "@storybook/addon-storyshots": "^6.3.12",
-    "@storybook/angular": "^6.3.0",
-    "@testing-library/angular": "^10.3.0",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.11.1",
+    "@storybook/angular": "^6.3.12",
+    "@testing-library/angular": "^10.11.0",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.33",
     "babel-loader": "^8.2.2",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^6.0.2",
     "jest": "^26.6.3",
-    "jest-preset-angular": "^8.3.2",
+    "jest-preset-angular": "^8.4.0",
     "karma-coverage": "~2.0.3",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^26.5.6",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.8"
   },
   "jest": {
     "preset": "jest-preset-angular",
@@ -80,8 +80,8 @@
       "/node_modules/"
     ],
     "snapshotSerializers": [
-      "jest-preset-angular/build/AngularSnapshotSerializer.js",
-      "jest-preset-angular/build/HTMLCommentSerializer.js"
+      "jest-preset-angular/build/serializers/ng-snapshot",
+      "jest-preset-angular/build/serializers/html-comment"
     ],
     "globals": {
       "ts-jest": {
