--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint": "ng lint",
     "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
     "storybook": "npm run docs:json && start-storybook -p 6006",
-    "build-storybook": "npm run docs:json && build-storybook"
+    "build-storybook": "npm run docs:json && build-storybook",
+    "chromatic": "npx chromatic --project-token=7d7668c11cdc"
   },
   "private": true,
   "dependencies": {
@@ -55,6 +56,7 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.33",
     "babel-loader": "^8.2.2",
+    "chromatic": "^6.0.4",
     "codelyzer": "^6.0.2",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.4.0",
