--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,16 +21,31 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-  test:
+    - run: npx jest
+    # - uses: chromaui/action@v1
+    #   with:
+    #     projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+    #     token: ${{ secrets.GITHUB_TOKEN }}
+  # test:
+  #   needs: build
+  #   runs-on: ubuntu-20.04
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: npm test
+  chromatic:
     needs: build
     runs-on: ubuntu-20.04
     steps:
-      - run: npm test
-  chromatic:
-    needs: test
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: chromaui/action@v1
-        with:
-          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - uses: chromaui/action@v1
+      with:
+        projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
